# castor

./: .gitignore  Dockerfile  README.md  config.toml  pyproject.toml
.github/workflows/: ci.yaml
src/castor/: __init__.py  main.py
src/castor/api/: __init__.py  routes.py  webhooks.py
src/castor/data/: __init__.py  ingestor.py
src/castor/models/: __init__.py  predict.py  train.py
tests/: __init__.py  test_smoke.py
